--- a/AppletClient/Ludens/MapLudens/src/co/edu/udea/ludens/applet/gui/PanelElement.form
+++ b/AppletClient/Ludens/MapLudens/src/co/edu/udea/ludens/applet/gui/PanelElement.form
@@ -1,4 +1,4 @@
-<?xml version="1.1" encoding="UTF-8" ?>
+<?xml version="1.0" encoding="UTF-8" ?>
 
 <Form version="1.3" maxVersion="1.7" type="org.netbeans.modules.form.forminfo.JPanelFormInfo">
   <Properties>
@@ -66,7 +66,7 @@
                           <Group type="103" groupAlignment="1" max="-2" attributes="0">
                               <Component id="lbLevelProduction" alignment="0" max="32767" attributes="0"/>
                               <Component id="lbAskuplevel" alignment="0" max="32767" attributes="1"/>
-                              <Component id="lbIcon" alignment="0" pref="154" max="32767" attributes="1"/>
+                              <Component id="lbIcon" alignment="0" max="32767" attributes="1"/>
                           </Group>
                           <EmptySpace max="-2" attributes="0"/>
                           <Component id="jLabel2" min="-2" pref="1" max="-2" attributes="0"/>
@@ -160,7 +160,7 @@
             </DimensionLayout>
             <DimensionLayout dim="1">
               <Group type="103" groupAlignment="0" attributes="0">
-                  <EmptySpace min="0" pref="137" max="32767" attributes="0"/>
+                  <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
               </Group>
             </DimensionLayout>
           </Layout>
@@ -187,7 +187,7 @@
             </DimensionLayout>
             <DimensionLayout dim="1">
               <Group type="103" groupAlignment="0" attributes="0">
-                  <EmptySpace min="0" pref="137" max="32767" attributes="0"/>
+                  <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
               </Group>
             </DimensionLayout>
           </Layout>
